# banana-pencil-club

./: .dockerignore  .gitignore  Dockerfile  Makefile  WRITEUP.md  constants.py  gemini.py  main.py  models.py  prompts.py  pyproject.toml  utils.py
.data/stories/luna-and-the-whispering-locket/: luna-and-the-whispering-locket.json
pages/: about.py  create.py  story.py
